# generative-ui-london-hackathon-starter

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.e2e.yml  package.json  pnpm-lock.yaml  render.yaml
.claude/skills/genui-compose-a2ui/: SKILL.md
.claude/skills/genui-create-team/: SKILL.md
.claude/skills/genui-present-to-human/: SKILL.md
agent/: main.py  pyproject.toml
agent/src/: catalog.py  dynamic_agent.py  fixed_agent.py  present.py  research_agent.py
docs/: demo-runbook.md  sot.md
docs/deploy/: rescoped-demo-envelope.json  rescoped-demo-seed.sql  rescoped-deploy-artifacts.md
other-examples/legal-contract-review/: FRICTION.md
public/: llms.txt  tell-your-human.md
scripts/: doctor.ts  smoke.ts  validate-widget.ts
server/: .gitignore  Dockerfile  pyproject.toml
server/src/atext/: __init__.py  api.py  auth.py  cli.py  config.py  db.py  linkup_search.py  models.py  repository.py
server/src/atext/migrations/: 001_initial.sql
server/tests/: test_auth_certificate.py  test_auth_v2_envelope.py  test_db_config.py  test_e2e_team_isolation.py  test_presentation_links.py  test_search_endpoint.py
src/a2ui/: theme.css
src/a2ui/catalog/: definitions.ts  renderers.tsx
src/app/: layout.tsx
src/app/(pdf)/: CopyCommand.tsx  genui-site.css  layout.tsx  page.tsx
src/app/(pdf)/catalog/: page.tsx
src/app/(pdf)/dynamic/: page.tsx
src/app/other-examples/: page.tsx
src/app/present/: layout.tsx
src/components/pdf-analyst/: Brand.tsx  Providers.tsx
src/hooks/: use-generative-ui-examples.tsx
(+6 files in other folders)
