[project]
name = "genui-server"
version = "0.1.0"
description = "AWID team-cert authenticated artifact and presentation-link server for genui"
requires-python = ">=3.12"
dependencies = [
  "awid-service",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "linkup-sdk>=0.18.2",
  "pgdbm>=0.4.1",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pynacl>=1.6.2",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
genui-server = "atext.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atext"]

[tool.uv.sources]
awid-service = { path = "../../aweb/awid", editable = true }
pgdbm = { path = "../../pgdbm", editable = true }

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.14.0",
  "mypy>=1.18.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "../../aweb/awid/src", "../../aweb/server/src", "../../pgdbm/src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "e2e: docker-backed end-to-end tests using real aw/awid tooling",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_configs = true
